# PUNK-Events

./: README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml  styles.yml  tests.yml
backend/: backend.dockerfile  pyproject.toml  setup.cfg
backend/app/: main.py
backend/app/api/api_v1/: routers.py
backend/app/api/api_v1/dependencies/: domain_repo.py  google_authentication.py
backend/app/api/api_v1/endpoints/: login.py
backend/app/api/v1/: routers.py
backend/app/api/v1/dependencies/: domain_repo.py  entity.py  google_authentication.py  repo.py
backend/app/api/v1/endpoints/: comment.py  event.py  login.py  moderator.py  user.py
backend/app/db/: events.py  models.py
backend/app/db/crud/comments/: repo.py
backend/app/db/crud/events/: repo.py
backend/app/db/crud/moderators/: repo.py
backend/app/db/crud/users/: repo.py
backend/app/db/migrations/versions/: 3cac6a6f6059_add_test_data.py  45d98cfa7cc7_main_tables.py
backend/app/db/users/: repo.py
backend/app/resources/: strings.py
backend/app/schemas/: comment.py  enums.py  event.py  user.py
backend/app/schemas/google/: token.py
backend/app/services/api/: google_api.py
backend/app/settings/: events.py  logger.py
backend/app/settings/environments/: base.py  dev.py  test.py
backend/scripts/: so_pythonic.txt
backend/tests/: conftest.py
backend/tests/test_settings/: test_config.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js  time.scss
frontend/src/API/: GoogleLogin.jsx
frontend/src/pages/: CreateEvent.jsx  EventInfo.jsx  (+5 more)
(+20 files in other folders)
