 # https://python-poetry.org/docs/

[tool.poetry]
name = "punk-events"
version = "0.1.0"
description = "TODO"
authors = []


[tool.poetry.dependencies]
python = "~3.9"

fastapi = "~0.70.0"
uvicorn = "~0.13.4"

alembic = "~1.6.5"
SQLAlchemy = "~1.4.20"
psycopg2-binary = "~2.9.1"
asyncpg = "~0.23.0"
greenlet = "~1.1.1"

loguru = "~0.5.3"
mako = "~1.1.4"
redis = "3.5.3"
aioredis = "1.3.1"
asgi-lifespan = "1.0.1"
molten = "1.0.1"
tenacity = "6.2.0"
httpx = "0.19.0"
itsdangerous = "~2.0.1"
authlib = "~0.15.5"

[tool.poetry.dev-dependencies]
black = "~21.6b0"
isort = "5.9.2"
autoflake = "~1.4"
mypy = "~0.910"
wemake-python-styleguide = "~0.15.3"
pydantic = {version="~1.8.1", extras=["email"]}

pytest = "~6.2.4"
pytest-cov = "~2.12.1"
pytest-asyncio = "~0.15.1"
pytest-localserver = "~0.5.0"
python-dotenv = "~0.18.0"
pytest-clarity = "~1.0.1"
pytest-timeout = "~1.4.2"
pytest-env = "~0.6.2"


[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
